# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
Brain_games/: cli.py  even.py
Brain_games/Games/: calc.py  check.py  cli.py  euclidean_algorithm.py  even.py  gcd.py  prime.py  progression.py
Brain_games/Games/mod/: check.py  check_prime.py  euclidean_algorithm.py  make_progression.py
Brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_games.py
