[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Miroslava"]
readme = "README.md"
packages = [{include = "Brain_games"}, ]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "Brain_games.scripts.brain_games:main"
brain-even = "Brain_games.scripts.brain_even:main"
brain-calc = "Brain_games.scripts.brain_calc:main"
brain-gcd = "Brain_games.scripts.brain_gcd:main"
brain-progression = "Brain_games.scripts.brain_progression:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
